# crypto-tool

./: CMakeLists.txt  README.md
cpp/include/: hashing.h  utils.hpp
cpp/include/crypto/: hashing.hpp
cpp/src/: main.cpp  utils.cpp
cpp/src/crypto/: hashing.cpp
cpp/test/: test_main.cpp
cpp/test/crypto/: test_hashing.cpp
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs
